--- a/manpages/brew.1
+++ b/manpages/brew.1
@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "BREW" "1" "June 2018" "Homebrew" "brew"
+.TH "BREW" "1" "July 2018" "Homebrew" "brew"
 .
 .SH "NAME"
 \fBbrew\fR \- The missing package manager for macOS
@@ -652,6 +652,46 @@ Display where tap \fIuser\fR\fB/\fR\fIrepo\fR\'s directory is located\.
 Print the version number of Homebrew to standard output and exit\.
 .
 .SH "DEVELOPER COMMANDS"
+Usage: brew audit [options] [\fIformulae\fR]
+.
+.P
+Check \fIformulae\fR for Homebrew coding style violations\. This should be run before submitting a new formula\.
+.
+.P
+If no \fIformulae\fR are provided, all of them are checked\.
+.
+.IP "" 4
+.
+.nf
+
+    \-\-strict                     Run additional style checks, including Rubocop style checks\.
+    \-\-online                     Run additional slower style checks that require a
+                                 network connection\.
+    \-\-new\-formula                Run various additional style checks to determine if a new formula
+                                 is eligible for Homebrew\. This should be used when creating
+                                 new formula and implies \-\-strict and \-\-online\.
+    \-\-fix                        Fix style violations automatically using
+                                 RuboCop\'s auto\-correct feature\.
+    \-\-display\-cop\-names          Include the RuboCop cop name for each violation
+                                 in the output\.
+    \-\-display\-filename           Prefix everyline of output with name of the file or
+                                 formula being audited, to make output easy to grep\.
+\-D, \-\-audit\-debug                Activates debugging and profiling
+    \-\-only                       Passing \-\-only=method will run only the methods named audit_method,
+                                 `method` should be a comma\-separated list\.
+    \-\-except                     Passing \-\-except=method will run only the methods named audit_method,
+                                 `method` should be a comma\-separated list\.
+    \-\-only\-cops                  Passing \-\-only\-cops=cops will check for violations of only the listed
+                                 RuboCop cops\. `cops` should be a comma\-separated list of cop names\.
+    \-\-except\-cops                Passing \-\-except\-cops=cops will skip checking the listed
+                                 RuboCop cops violations\. `cops` should be a comma\-separated list of cop names\.
+\-v, \-\-verbose                    Verbose mode\.
+\-d, \-\-debug                      Display debug info\.
+\-h, \-\-help                       Show this message
+.
+.fi
+.
+.IP "" 0
 .
 .TP
 \fBaudit\fR [\fB\-\-strict\fR] [\fB\-\-fix\fR] [\fB\-\-online\fR] [\fB\-\-new\-formula\fR] [\fB\-\-display\-cop\-names\fR] [\fB\-\-display\-filename\fR] [\fB\-\-only=\fR\fImethod\fR|\fB\-\-except=\fR\fImethod\fR] [\fB\-\-only\-cops=\fR\fIcops\fR|\fB\-\-except\-cops=\fR\fIcops\fR] [\fIformulae\fR]
